--- a/simple_files/style.css
+++ b/simple_files/style.css
@@ -158,3 +158,45 @@ a:hover {
 	font-size:100%;
 	margin-top:5px;
 }
+
+
+
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  /* background-color: #f1f1f1; */
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 7px 15px;
+  transition: 0.3s;
+  color: #DB661C;
+  font-size: 15px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 10px 0px;
+  border: 1px solid #ccc;
+  border-top: none;
+  min-height: 450px;
+}
